src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_quantize_per_tensor_dynamic_out(value out, value self, int dtype, int reduce_range);
value atg_quantize_per_tensor_out(value out, value self, double scale, int64_t zero_point, int dtype);
value atg_quantize_per_tensor_tensor_qparams(value self, value scale, value zero_point, int dtype);
value atg_quantize_per_tensor_tensor_qparams_out(value out, value self, value scale, value zero_point, int dtype);
value atg_quantize_per_tensor_tensors(value tensors, value scales, value zero_points, int dtype);
void atg_quantize_per_tensor_tensors_out(value out, value tensors, value scales, value zero_points, int dtype);
value atg_quantized_batch_norm(value input, value weight, value bias, value mean, value var, double eps, double output_scale, int64_t output_zero_point);
value atg_quantized_batch_norm_out(value out, value input, value weight, value bias, value mean, value var, double eps, double output_scale, int64_t output_zero_point);
value atg_quantized_gru_cell(value input, value hx, value w_ih, value w_hh, value b_ih, value b_hh, value packed_ih, value packed_hh, value col_offsets_ih, value col_offsets_hh, value scale_ih, value scale_hh, value zero_point_ih, value zero_point_hh);
value atg_quantized_lstm_cell(value input, value hx, value w_ih, value w_hh, value b_ih, value b_hh, value packed_ih, value packed_hh, value col_offsets_ih, value col_offsets_hh, value scale_ih, value scale_hh, value zero_point_ih, value zero_point_hh);
value atg_quantized_max_pool1d(value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode);
value atg_quantized_max_pool1d_out(value out, value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode);
value atg_quantized_max_pool2d(value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode);
value atg_quantized_max_pool2d_out(value out, value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode);
value atg_quantized_max_pool3d(value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode);
value atg_quantized_max_pool3d_out(value out, value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode);
value atg_quantized_rnn_relu_cell(value input, value hx, value w_ih, value w_hh, value b_ih, value b_hh, value packed_ih, value packed_hh, value col_offsets_ih, value col_offsets_hh, value scale_ih, value scale_hh, value zero_point_ih, value zero_point_hh);
value atg_quantized_rnn_tanh_cell(value input, value hx, value w_ih, value w_hh, value b_ih, value b_hh, value packed_ih, value packed_hh, value col_offsets_ih, value col_offsets_hh, value scale_ih, value scale_hh, value zero_point_ih, value zero_point_hh);
value atg_rad2deg(value self);
value atg_rad2deg_(value self);
value atg_rad2deg_out(value out, value self);
value atg_rand(value size, int options_kind, int options_device);
value atg_rand_like(value self);
value atg_rand_like_out(value out, value self);
value atg_rand_out(value out, value size);
value atg_randint(int64_t high, value size, int options_kind, int options_device);
value atg_randint_like(value self, int64_t high);
value atg_randint_like_low_dtype(value self, int64_t low, int64_t high);
value atg_randint_like_low_dtype_out(value out, value self, int64_t low, int64_t high);
value atg_randint_like_out(value out, value self, int64_t high);
value atg_randint_low(int64_t low, int64_t high, value size, int options_kind, int options_device);
value atg_randint_low_out(value out, int64_t low, int64_t high, value size);
value atg_randint_out(value out, int64_t high, value size);
value atg_randn(value size, int options_kind, int options_device);
value atg_randn_like(value self);
value atg_randn_like_out(value out, value self);
value atg_randn_out(value out, value size);
value atg_random(value self);
value atg_random_(value self);
value atg_random_from(value self, int64_t from, value to);
value atg_random_from_(value self, int64_t from, value to);
value atg_random_from_out(value out, value self, int64_t from, value to);
value atg_random_out(value out, value self);
value atg_random_to(value self, int64_t to);
value atg_random_to_(value self, int64_t to);
value atg_random_to_out(value out, value self, int64_t to);
value atg_randperm(int64_t n, int options_kind, int options_device);
value atg_randperm_out(value out, int64_t n);
value atg_range(value start, value end, int options_kind, int options_device);
value atg_range_out(value out, value start, value end, value step);
value atg_range_out_(value out, value start, value end);
value atg_range_step(value start, value end, value step, int options_kind, int options_device);
value atg_ravel(value self);
value atg_real(value self);
value atg_reciprocal(value self);
value atg_reciprocal_(value self);
value atg_reciprocal_out(value out, value self);
value atg_reflection_pad1d(value self, value padding);
value atg_reflection_pad1d_backward(value grad_output, value self, value padding);
value atg_reflection_pad1d_backward_grad_input(value grad_input, value grad_output, value self, value padding);
value atg_reflection_pad1d_out(value out, value self, value padding);
value atg_reflection_pad2d(value self, value padding);
value atg_reflection_pad2d_backward(value grad_output, value self, value padding);
value atg_reflection_pad2d_backward_grad_input(value grad_input, value grad_output, value self, value padding);
value atg_reflection_pad2d_out(value out, value self, value padding);
value atg_reflection_pad3d(value self, value padding);