src/bindings/torch_bindings_generated5.ml


  let stubs_quantize_per_tensor_dynamic_out =
    foreign
      "atg_quantize_per_tensor_dynamic_out"
      (gc_tensor @-> gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_quantize_per_tensor_out =
    foreign
      "atg_quantize_per_tensor_out"
      (gc_tensor @-> gc_tensor @-> double @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_quantize_per_tensor_tensor_qparams =
    foreign
      "atg_quantize_per_tensor_tensor_qparams"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_quantize_per_tensor_tensor_qparams_out =
    foreign
      "atg_quantize_per_tensor_tensor_qparams_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_quantize_per_tensor_tensors =
    foreign
      "atg_quantize_per_tensor_tensors"
      (ptr gc_tensor
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> returning (ptr raw_tensor))
  ;;

  let stubs_quantize_per_tensor_tensors_out =
    foreign
      "atg_quantize_per_tensor_tensors_out"
      (ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> returning void)
  ;;

  let stubs_quantized_batch_norm =
    foreign
      "atg_quantized_batch_norm"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> double
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_quantized_batch_norm_out =
    foreign
      "atg_quantized_batch_norm_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> double
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_quantized_gru_cell =
    foreign
      "atg_quantized_gru_cell"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_quantized_lstm_cell =
    foreign
      "atg_quantized_lstm_cell"
      (ptr raw_tensor
       @-> gc_tensor
       @-> ptr gc_tensor
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> scalar
       @-> scalar
       @-> returning void)
  ;;

  let stubs_quantized_max_pool1d =
    foreign
      "atg_quantized_max_pool1d"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_quantized_max_pool1d_out =
    foreign
      "atg_quantized_max_pool1d_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_quantized_max_pool2d =
    foreign
      "atg_quantized_max_pool2d"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_quantized_max_pool2d_out =
    foreign
      "atg_quantized_max_pool2d_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_quantized_max_pool3d =
    foreign
      "atg_quantized_max_pool3d"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_quantized_max_pool3d_out =
    foreign
      "atg_quantized_max_pool3d_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_quantized_rnn_relu_cell =
    foreign
      "atg_quantized_rnn_relu_cell"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_quantized_rnn_tanh_cell =
    foreign
      "atg_quantized_rnn_tanh_cell"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_rad2deg = foreign "atg_rad2deg" (gc_tensor @-> returning raw_tensor)
  let stubs_rad2deg_ = foreign "atg_rad2deg_" (gc_tensor @-> returning raw_tensor)

  let stubs_rad2deg_out =
    foreign "atg_rad2deg_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_rand =
    foreign "atg_rand" (ptr int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_rand_like = foreign "atg_rand_like" (gc_tensor @-> returning raw_tensor)

  let stubs_rand_like_out =
    foreign "atg_rand_like_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_rand_out =
    foreign "atg_rand_out" (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_randint =
    foreign
      "atg_randint"
      (int64_t @-> ptr int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_randint_like =
    foreign "atg_randint_like" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_randint_like_low_dtype =
    foreign
      "atg_randint_like_low_dtype"
      (gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_randint_like_low_dtype_out =
    foreign
      "atg_randint_like_low_dtype_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_randint_like_out =
    foreign
      "atg_randint_like_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_randint_low =
    foreign
      "atg_randint_low"
      (int64_t
       @-> int64_t
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_randint_low_out =
    foreign
      "atg_randint_low_out"
      (gc_tensor @-> int64_t @-> int64_t @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_randint_out =
    foreign
      "atg_randint_out"
      (gc_tensor @-> int64_t @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_randn =
    foreign "atg_randn" (ptr int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_randn_like = foreign "atg_randn_like" (gc_tensor @-> returning raw_tensor)

  let stubs_randn_like_out =
    foreign "atg_randn_like_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_randn_out =
    foreign "atg_randn_out" (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_random = foreign "atg_random" (gc_tensor @-> returning raw_tensor)
end

module C3 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_random_ = foreign "atg_random_" (gc_tensor @-> returning raw_tensor)

  let stubs_random_from =
    foreign
      "atg_random_from"
      (gc_tensor @-> int64_t @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_random_from_ =
    foreign
      "atg_random_from_"
      (gc_tensor @-> int64_t @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_random_from_out =
    foreign
      "atg_random_from_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_random_out =
    foreign "atg_random_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_random_to =
    foreign "atg_random_to" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_random_to_ =
    foreign "atg_random_to_" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_random_to_out =
    foreign
      "atg_random_to_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_randperm =
    foreign "atg_randperm" (int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_randperm_out =
    foreign "atg_randperm_out" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_range =
    foreign "atg_range" (scalar @-> scalar @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_range_out =
    foreign
      "atg_range_out"
      (gc_tensor @-> scalar @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_range_out_ =
    foreign "atg_range_out_" (gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_range_step =
    foreign
      "atg_range_step"
      (scalar @-> scalar @-> scalar @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_ravel = foreign "atg_ravel" (gc_tensor @-> returning raw_tensor)
  let stubs_real = foreign "atg_real" (gc_tensor @-> returning raw_tensor)
  let stubs_reciprocal = foreign "atg_reciprocal" (gc_tensor @-> returning raw_tensor)
  let stubs_reciprocal_ = foreign "atg_reciprocal_" (gc_tensor @-> returning raw_tensor)

  let stubs_reciprocal_out =
    foreign "atg_reciprocal_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_reflection_pad1d =
    foreign
      "atg_reflection_pad1d"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_reflection_pad1d_backward =
    foreign
      "atg_reflection_pad1d_backward"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_reflection_pad1d_backward_grad_input =
    foreign
      "atg_reflection_pad1d_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_reflection_pad1d_out =
    foreign
      "atg_reflection_pad1d_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_reflection_pad2d =
    foreign
      "atg_reflection_pad2d"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_reflection_pad2d_backward =
    foreign
      "atg_reflection_pad2d_backward"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_reflection_pad2d_backward_grad_input =
    foreign
      "atg_reflection_pad2d_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_reflection_pad2d_out =
    foreign
      "atg_reflection_pad2d_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_reflection_pad3d =
    foreign
      "atg_reflection_pad3d"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;
end

module C (F : Cstubs.FOREIGN) = struct
  include C0 (F)
  include C1 (F)
  include C2 (F)
  include C3 (F)
end
